--- a/views/index.twig
+++ b/views/index.twig
@@ -18,6 +18,9 @@
                                 <div class="input-group mb-3">
                                     <input type="text" class="form-control" placeholder="Nom de votre partie (ex : Partie entre amis)" aria-label="nameRoom" id="nameRoom" name="nameRoom" aria-describedby="basic-addon1">
                                 </div>
+                                <div class="input-group mb-3">
+                                    <input type="text" class="form-control" placeholder="Votre pseudo durant la partie" aria-label="pseudoForCreate" name="pseudoForCreate" id="pseudoForCreate" aria-describedby="basic-addon1">
+                                </div>
                                 <input type="hidden" id="newRoom" name="newRoom" aria-describedby="basic-addon1" value="1">
                             </form>
                         </div>
