--- a/views/room/room.twig
+++ b/views/room/room.twig
@@ -14,40 +14,96 @@
 
         </div>
     </div>
-    <div id="newPlayer">
+    <div class="container">
+        <div class="row">
+            <div class="panel panel-primary">
+                <div class="panel">
+                    <div class="panel-body">
+                        <ul class="chat">
+                        </ul>
+                    </div>
+                    <div class="panel-footer">
+                        <div class="input-group">
+                            <input id="btn-input" type="text" class="form-control input-sm" placeholder="Type your message here..." />
+                            <span class="input-group-btn">
+                        <button class="btn btn-warning btn-sm" id="btn-chat">
+                            Send</button>
+                    </span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
+
 {% endblock %}
 
 {% block javascripts %}
     {{ parent() }}
     <script>
         $(document).ready(function(){
-            $('#newPlayer').append('');
+            socketIo.emit('joinRoom', { nameRoom : '{{ nameRoom }}', pseudo : '{{ pseudo }}', admin : '{{ admin }}', hasBeenCreate : '{{ hasBeenCreate }}'});
 
-            if ('{{ type }}' == 'create') {
-                socketIo.emit('createRoom', { nameRoom : '{{ nameRoom }}', pseudo : '{{ pseudo }}' });
-            }
-
-            if ('{{ type }}' == 'join') {
-                socketIo.emit('joinRoom', { nameRoom : '{{ nameRoom }}', pseudo : '{{ pseudo }}' });
-            }
-
-            socketIo.on('createRoom', function (data) {
-                $('#list-people').empty();
-                for (let client in data.list){
-                    $('#list-people').append('<p style="margin: 5px 5px">' + data.list[client] + '<p>');
-                }
-                $('#connected').text(data.number);
-
+            $('#btn-chat').on('click', (e) => {
+                socketIo.emit('sendMessage', { nameRoom : '{{ nameRoom }}', pseudo : '{{ pseudo }}', message : $('#btn-input').val()});
+                $('#btn-input').val('');
             });
 
-            socketIo.on('joinRoom', function (data) {
-                $('#list-people').empty();
-                for (let client in data.list){
-                    $('#list-people').append('<p style="margin: 5px 5px">' + data.list[client] + '<p>');
+            socketIo.on('joinRoom', function (data)
+            {
+                if (data.hasBeenCreate) {
+                    addEventInChat(data.player.name, 'Vient de crée la partie !');
+                } else {
+                    addEventInChat(data.player.name, 'Vient de rejoindre la partie !');
                 }
-                $('#connected').text(data.number);
+
+                $('#list-people').empty();
+            });
+
+            socketIo.on('sendMessage', function (data) {
+                $('.chat').append('<li class="right clearfix">\n' +
+                    '<div class="chat-body clearfix">\n' +
+                    '<div class="header">\n' +
+                    '<strong class="primary-font">'+ data.pseudo +'</strong>\n' +
+                    '</div>\n' +
+                    '<p>' + data.message + '</p>\n' +
+                    '</div>\n' +
+                    '</li>'
+                );
+            });
+
+            socketIo.on('refreshPlayersList', function (data) {
+                refreshPlayersList(data.players);
             });
         });
+
+        function addMessageInChat(pseudo, message) {
+            $('.chat').append('<li class="right clearfix">\n' +
+                '<div class="chat-body clearfix">\n' +
+                '<div class="header">\n' +
+                '<strong class="primary-font">'+ pseudo +'</strong>\n' +
+                '</div>\n' +
+                '<p>' + message + '</p>\n' +
+                '</div>\n' +
+                '</li>'
+            );
+        }
+
+        function addEventInChat(pseudo, message) {
+            $('.chat').append('<li class="right clearfix">\n' +
+                '<div class="chat-body clearfix">\n' +
+                '<div class="header">\n' +
+                '</div>\n' +
+                '<p><b>' + pseudo +' : '+ message + '<b></p>\n' +
+                '</div>\n' +
+                '</li>'
+            );
+        }
+
+        function refreshPlayersList(players) {
+            players.forEach(function(player) {
+                $('#list-people').append('<p style="margin: 5px 5px">' + player.name + '('+ player.role +')<p>');
+            })
+        }
     </script>
 {% endblock %}
