--- a/views/layout.twig
+++ b/views/layout.twig
@@ -19,7 +19,7 @@
                         <a class="nav-link" href="/">Accueil</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/settings/story">Lire l'histoire du chien perdu</a>
+                        <a class="nav-link" href="/settings/story">L'histoire</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/settings/roles">Rôle</a>
