--- a/views/index.twig
+++ b/views/index.twig
@@ -58,7 +58,9 @@
                 <div class="card-body">
                     <h5 class="card-title">{{ cards.role }}</h5>
                     <p class="card-text">{{ cards.description }}</p>
-                    <button data-decrease>-</button><input style="width: 20%" data-value type="text" value="0"/><button data-increase>+</button>
+                    <div id="card-counter">
+                        <button data-decrease>-</button><input style="width: 20%" data-value type="text" value="0"/><button data-increase>+</button>
+                    </div>
                 </div>
             </div>
         {% endfor %}
