Add role in form to submit

--- a/views/index.twig
+++ b/views/index.twig
@@ -24,6 +24,7 @@
                                 <div class="input-group mb-3" style="width: 30%; margin: auto;">
                                     <input type="text" class="form-control" placeholder="Nombre de joueurs maximum" aria-label="maxPlayerLimit" name="maxPlayerLimit" id="maxPlayerLimit" class aria-describedby="basic-addon1">
                                 </div>
+                                <div id="role-in-game"><div>
                                 <input type="hidden" id="newRoom" name="newRoom" aria-describedby="basic-addon1" value="1">
                             </form>
                         </div>
@@ -43,7 +44,7 @@
                                 <div class="input-group mb-3" style="width: 60%; margin: auto;">
                                     <input type="text" class="form-control" placeholder="Votre pseudo durant la partie" aria-label="pseudoToJoin" name="pseudo" id="pseudoForJoin" aria-describedby="basic-addon1">
                                 </div>
-                                <input type="hidden" id="client" name="client" aria-describedby="basic-addon1" value="1">
+                                <input type="hidden" id="joinRoom" name="joinRoom" aria-describedby="basic-addon1" value="1">
                             </form>
 
                         </div>
