Add babel and class card

--- a/views/room/room.twig
+++ b/views/room/room.twig
@@ -13,6 +13,7 @@
         <input type="hidden" id="nameRoom" value="{{ nameRoom }}">
         <input type="hidden" id="hasBeenCreate" value="{{ hasBeenCreate }}">
         <input type="hidden" id="maxPlayerLimit" value="{{ maxPlayerLimit }}">
+        <input type="hidden" id="cardsInGame" data-value="{{ cardsInGame }}">
     </div>
 
     <div class="head-list-people" style="text-align: center">
