--- a/views/index.twig
+++ b/views/index.twig
@@ -24,7 +24,8 @@
                                 <div class="input-group mb-3" style="width: 30%; margin: auto;">
                                     <input type="text" class="form-control" placeholder="Nombre de joueurs maximum" aria-label="maxPlayerLimit" name="maxPlayerLimit" id="maxPlayerLimit" class aria-describedby="basic-addon1">
                                 </div>
-                                <div id="role-in-game"><div>
+                                <div id="role-in-game">
+                                </div>
                                 <input type="hidden" id="newRoom" name="newRoom" aria-describedby="basic-addon1" value="1">
                             </form>
                         </div>
@@ -46,7 +47,6 @@
                                 </div>
                                 <input type="hidden" id="joinRoom" name="joinRoom" aria-describedby="basic-addon1" value="1">
                             </form>
-
                         </div>
                     </div>
                 </div>
@@ -54,17 +54,17 @@
         </div>
     </div>
     <div class="card-group">
-        {% for key, cards in cardsRole %}
-            <div class="card">
-                <div class="card-body">
-                    <h5 class="card-title">{{ cards.role }}</h5>
-                    <p class="card-text">{{ cards.description }}</p>
-                    <div id="card-counter">
-                        <button class="btn-incremented-counter" data-children-input="card_{{ key }}">+</button><input style="width: 20%; text-align: center" class="counter_card" id="card_{{ key }}" type="text" value="0"/><button class="btn-decremented-counter" data-children-input="card_{{ key }}">-</button>
-                    </div>
+    {% for key, cards in cardsRole %}
+        <div class="card">
+            <div class="card-body">
+                <h5 class="card-title">{{ cards.role }}</h5>
+                <p class="card-text">{{ cards.description }}</p>
+                <div class="card-counter" id="card-counter-{{ cards.id }}">
+                    <button type="button" class="btn-incremented-counter btn" data-children-input="card_{{ cards.id }}">+</button><input style="width: 20%; text-align: center" class="counter_card" id="card_{{ cards.id }}" type="text" value="0"/><button type="button" class="btn-decremented-counter btn" data-children-input="card_{{ cards.id }}">-</button>
                 </div>
             </div>
-        {% endfor %}
+        </div>
+    {% endfor %}
     </div>
 {% endblock %}
 
