--- a/views/room/room.twig
+++ b/views/room/room.twig
@@ -38,10 +38,13 @@
                 <div class="panel">
                     <div class="panel-body">
                         {% if admin == 1 %}
-                            <ul class="chat">
+                            <ul class="chatAdmin">
 
                             </ul>
                         {% endif %}
+                            <ul class="chat">
+
+                            </ul>
                     </div>
                 </div>
             </div>
@@ -51,7 +54,7 @@
 
 {% block javascripts %}
     {{ parent() }}
-    <script type="module" src="/js/utils.js"></script>
+    <script type="module" src="/js/game_infos.js"></script>
     <script type="module" src="/js/start_game.js"></script>
 
     {% if hasBeenCreate  == '1' %}
