Add design and add "deroulement" section

--- a/views/layout.twig
+++ b/views/layout.twig
@@ -22,10 +22,10 @@
                         <a class="nav-link" href="/">Accueil</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/settings/story">L'histoire</a>
+                        <a class="nav-link" href="/settings/story">Histoire</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/settings/roles">Rôle</a>
+                        <a class="nav-link" href="/settings/deroulement">Déroulement</a>
                     </li>
                 </ul>
             </div>
