--- a/views/index.twig
+++ b/views/index.twig
@@ -31,9 +31,7 @@
                                                 <div class="card-body">
                                                     <div class="choice-role">
                                                         <h5 class="card-title" style="display: inline">{{ cards.role }}</h5>
-                                                        <button type="button" class="btn btn-dark btn-circle btn-circle-sm m-1" data-container="body" data-toggle="popover" data-placement="top" data-content="{{ cards.description }}" style="line-height: 0;">
-                                                            ?
-                                                        </button>
+                                                        <i title="Description" data-toggle="popover" data-placement="top" data-content="{{ cards.description }}" class="fa fa-question-circle" aria-hidden="true" data-html="true"></i>
                                                     </div>
                                                     <div class="card-counter" id="card-counter-{{ cards.id }}">
                                                         <button type="button" class="btn-incremented-counter btn" data-children-input="card_{{ cards.id }}">+</button>
